Public/css/basicLayout.css
#banner {
  background-color: #333333;
  color: #999999;

  height: 70px;
  padding-bottom: 5px;
  width: 100%;}

#headerName{
  text-align: center;
  font-size: 40px;
}
header{
  width:100%;
    background-color: #333333;
}

body {
  margin: 0;
  font-family: "Poppins", Arial, "sans-serif";
  font-size: 1rem;
  font-weight: 400;
  line-height: 2.2;
  color: #999999;
  text-align: left;}


  a {
  color:#078e0f;
  font-size: 18px;
  text-decoration: none;
  background-color: transparent;
  -webkit-text-decoration-skip: objects; }



h1, h2, h3, h4, h5 {
  color:#078e0f;
}

.loginlabel {
  color:#078e0f;
  font-size: 20px;
}

textarea {
  margin-bottom: 10px;


}
img {
  vertical-align: middle;
  border-style: none; }

  table {
  border-collapse: collapse;
 }

 th {
   padding: 3px;
   font-size: 15px;
 }

td {
  padding: 3px;
  font-size: 12px;
}

  footer {
    background-color: #333333;
    color: #999999;
    font-size: 0.9rem; }

    footer p {
  margin: 0;
  padding-bottom: 1rem; }

@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css');

* {
  font-family: 'Open Sans', sans-serif;
  font-size:12px;
}

body {
    background-color:#ececec;
}

.homebutton{
  font-size:20pt;
  padding-right:10px;
  padding-top:10px;
  color: #999999;
}

#homebutton{
  margin:14px;
  font-size:16pt;
}

#homebutton:hover {
  background-color: grey;
  border:none;
  cursor: pointer;
   }

.btn-primary:hover {
  background-color: grey;
  border:none;
  cursor: pointer;
    }

.pagetitle {
  padding-left:10px;
}

.btn-primary {
    color:white;
    background-color:#078e0f;
    border-color: #078e0f;
    font-size:18px;
    margin:6px;
    margin-right:12px;
    margin-top:12px;
}

#clientbutton {
  position: absolute;
  bottom: 5px;
}

.container {
  margin: 50px 0 0 100px;
}

.tile {
  width:160px;
  height:180px;
  border-radius:4px;
  box-shadow: 2px 2px 4px 0 rgba(0,0,0,0.15);
  margin-top:20px;
  margin-left:20px;
  float:left;
}

.tile.wide {
  width: 340px;
}

.tile .header {
  height:120px;
  background-color:#f4f4f4;
  border-radius: 4px 4px 0 0;
  color:white;
  font-weight:300;
}

.tile.wide .header .left, .tile.wide .header .right {
  width:160px;
  float:left;
}

.tile .header .count {
  font-size: 48px;
  text-align:center;
  padding:10px 0 0;
}

.tile .header .title {
  font-size: 20px;
  text-align:center;
}

.tile .body {
  height:60px;
  border-radius: 0 0 4px 4px;
  color:#333333;
  background-color:white;
}

.tile .body .title {
    text-align:center;
    font-size:20px;
    padding-top:2%;
}

.tile.wide .body .title {
  padding:4%;
}

.tile.job .header {
  background: linear-gradient(to bottom right, #609931, #87bc27);
}

.tile.job  .body {
  color: #609931;
}

.tile.resource .header {
  background: linear-gradient(to bottom right, #ef7f00, #f7b200);
}

.tile.resource  .body {
  color: #ef7f00;
}

.tile.quote .header {
  background: linear-gradient(to bottom right, #1f6abb, #4f9cf2);
}

.tile.quote  .body {
  color: #1f6abb;
}

.tile.invoice .header {
  background: linear-gradient(to bottom right, #0aa361, #1adc88);
}

.tile.invoice  .body {
  color: #0aa361;
}
.card{
  margin:50px;
  margin-top: 75px;
  display:inline-block;
  padding: 10px;
  width: 25rem;
  vertical-align: top;
}

.navBoxes{
  margin : 1px;
  padding : 10px;
}

.turbineLink{
  font-size:12px;
}

.split {
  height: 100%;
  width: 56%;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow-x: hidden;
}

/* Control the left side */
.left {
  left: 0;
  background-image: url("images/turbine.jpg");
}

/* Control the right side */
.right {
  right: 0;
  background-color: #999;
}

/* If you want the content centered horizontally and vertically */
.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.fill {
  width:100%;
height:100%;
object-fit: cover;
overflow: hidden;
}

input[type=text], select {
     width: 100%;
     padding: 12px 20px;
     margin: 20px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }

 input[type=password], select {
      width: 100%;
      padding: 12px 20px;
      margin: 20px 0;
      display: inline-block;
      border: 1px solid #ccc;
      border-radius: 4px;
      box-sizing: border-box;
  }

 input[type=submit] {
     width: 100%;
     background-color:#078e0f;
     font-size:18px;
     color: white;
     padding: 3px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }

 input[type=submit]:hover {
     background-color: grey;
 }

 #logintitle {
   font-size:60px;
 }

